dspace/openaire structure configuration
align to metadateschema of dspace/cris aligned to the openaire guidelines for cris managers